	bugfix: triggers disable tabs completely now (ticket:211)
	bugfix: properly delete objects with linked ports (ticket:300)
	bugfix: completely remove warnings caused by ticket:277 (by Jason Lifsey)
	update: restore PortCompat editor functionality (ticket:263)
	update: don't show inacessible links in index (by Jeroen Benda)
	update: consider permitted VLANs in switchvlans (#302 by Boris Lytochkin)
0.17.7 2009-11-09
	bugfix: work around unbuffered query in ports pop-up (ticket:297)
	update: add inline mode switcher by Jens Groh (ticket:298)
0.17.6 2009-10-31
	update: voice/video devices
	bugfix: PHP warning
	bugfix: escaping of a newly created IPv4 network name (ticket:292)
	bugfix: generate URLs more friendly for reverse proxies (ticket:246)
	new feature: "proximity" view in port selector popup (ticket:284)
	new feature: "$no_asset_tag" autotag (ticket:283)
0.17.5 2009-09-16
	bugfix: corrected reference counters in tag tree
	bugfix: "cn" autotag was not generated for objects
	new feature: make text in the "added new object X" message clickable (ticket:280) (by Boris Lytochkin)
	new feature: support for Ethernet transceivers (ticket:64) and WDM grids
	new feature: initial support of APC switched rack PDUs (ticket:175)
	update: power port type was split into input and output (ticket:261)
0.17.4 2009-08-13
	bugfix: remove PHP warnings on IPv4 space management tab (ticket:277)
	bugfix: work around array_fill_keys() from PHP 5.2 (ticket:278)
	bugfix: delete real servers on RS pool deletion (ticket:233)
	bugfix: "Same type, same tags" form was broken (ticket:279)
	update: add more InnoDB foreign keys
	update: also search object ports by label text
0.17.3 2009-08-08
	update: even better search function (ticket:20)
	update: suggest tag selector for new files and users (ticket:205)
	update: "multiple ports" form is now hidden by default (ticket:274)
	new feature: tags quick list on "Tags" tab (ticket:259)
	bugfix: removed PHP warnings on "Rackspace" tab