@@ -25,6 +25,7 @@ $max_dict_key = array
 	'0.17.5' => 1322,
 	'0.17.6' => 1326,
 	'0.17.7' => 1326,
+	'0.17.8' => 1334,
 );
 
 define ('TAGNAME_REGEXP', '^[[:alnum:]]([\. _~-]?[[:alnum:]])*$');
