@@ -234,12 +234,12 @@ $dictionary = array
 	209 => array ('chapter_id' => 12, 'dict_value' => 'Foundry%GPASS%ServerIron GT E'),
 	210 => array ('chapter_id' => 12, 'dict_value' => '[[Cisco%GPASS%Catalyst 2970G-24T | http://www.cisco.com/en/US/products/hw/switches/ps5206/ps5313/index.html]]'),
 	211 => array ('chapter_id' => 12, 'dict_value' => '[[Cisco%GPASS%Catalyst 2970G-24TS | http://www.cisco.com/en/US/products/hw/switches/ps5206/ps5437/index.html]]'),
-	212 => array ('chapter_id' => 13, 'dict_value' => 'Linux%GSKIP%RHFC1'),
-	213 => array ('chapter_id' => 13, 'dict_value' => 'Linux%GSKIP%RHFC2'),
-	214 => array ('chapter_id' => 13, 'dict_value' => 'Linux%GSKIP%RHFC3'),
-	215 => array ('chapter_id' => 13, 'dict_value' => 'Linux%GSKIP%RHFC4'),
-	216 => array ('chapter_id' => 13, 'dict_value' => 'Linux%GSKIP%RHFC5'),
-	217 => array ('chapter_id' => 13, 'dict_value' => 'Linux%GSKIP%RHFC6'),
+	212 => array ('chapter_id' => 13, 'dict_value' => 'Linux%GSKIP%RH Fedora C1'),
+	213 => array ('chapter_id' => 13, 'dict_value' => 'Linux%GSKIP%RH Fedora C2'),
+	214 => array ('chapter_id' => 13, 'dict_value' => 'Linux%GSKIP%RH Fedora C3'),
+	215 => array ('chapter_id' => 13, 'dict_value' => 'Linux%GSKIP%RH Fedora C4'),
+	216 => array ('chapter_id' => 13, 'dict_value' => 'Linux%GSKIP%RH Fedora C5'),
+	217 => array ('chapter_id' => 13, 'dict_value' => 'Linux%GSKIP%RH Fedora C6'),
 	218 => array ('chapter_id' => 13, 'dict_value' => 'BSD%GSKIP%Solaris 8'),
 	219 => array ('chapter_id' => 13, 'dict_value' => 'BSD%GSKIP%Solaris 9'),
 	220 => array ('chapter_id' => 13, 'dict_value' => 'BSD%GSKIP%Solaris 10'),
@@ -254,7 +254,7 @@ $dictionary = array
 	229 => array ('chapter_id' => 13, 'dict_value' => 'Linux%GSKIP%ALTLinux Master 2.0'),
 	230 => array ('chapter_id' => 13, 'dict_value' => 'Linux%GSKIP%ALTLinux Master 2.2'),
 	231 => array ('chapter_id' => 13, 'dict_value' => 'Linux%GSKIP%ALTLinux Master 2.4'),
-	232 => array ('chapter_id' => 13, 'dict_value' => 'Linux%GSKIP%RHF7'),
+	232 => array ('chapter_id' => 13, 'dict_value' => 'Linux%GSKIP%RH Fedora 7'),
 	233 => array ('chapter_id' => 13, 'dict_value' => 'Linux%GSKIP%SLES10'),
 	234 => array ('chapter_id' => 13, 'dict_value' => '[[Linux%GSKIP%Debian 3.0 (woody) | http://debian.org/releases/woody/]]'),
 	235 => array ('chapter_id' => 13, 'dict_value' => '[[Linux%GSKIP%Debian 3.1 (sarge) | http://debian.org/releases/sarge/]]'),
@@ -264,7 +264,7 @@ $dictionary = array
 	239 => array ('chapter_id' => 13, 'dict_value' => 'BSD%GSKIP%FreeBSD 4.x'),
 	240 => array ('chapter_id' => 13, 'dict_value' => 'BSD%GSKIP%FreeBSD 5.x'),
 	241 => array ('chapter_id' => 13, 'dict_value' => 'BSD%GSKIP%FreeBSD 6.x'),
-	242 => array ('chapter_id' => 13, 'dict_value' => 'Linux%GSKIP%RHF8'),
+	242 => array ('chapter_id' => 13, 'dict_value' => 'Linux%GSKIP%RH Fedora 8'),
 	243 => array ('chapter_id' => 13, 'dict_value' => 'Linux%GSKIP%ALTLinux Master 4.0'),
 	244 => array ('chapter_id' => 14, 'dict_value' => 'Cisco IOS 12.0'),
 	245 => array ('chapter_id' => 14, 'dict_value' => 'Foundry SLB'),
@@ -810,7 +810,7 @@ $dictionary = array
 	787 => array ('chapter_id' => 12, 'dict_value' => '[[3Com%GPASS%8807 | http://www.3com.com/products/en_US/detail.jsp?tab=features&sku=3C17502A&pathtype=purchase]]'),
 	788 => array ('chapter_id' => 12, 'dict_value' => '[[3Com%GPASS%8810 | http://www.3com.com/products/en_US/detail.jsp?tab=features&sku=3C17501A&pathtype=purchase]]'),
 	789 => array ('chapter_id' => 12, 'dict_value' => '[[3Com%GPASS%8814 | http://www.3com.com/products/en_US/detail.jsp?tab=features&sku=3C17500A&pathtype=purchase]]'),
-	790 => array ('chapter_id' => 13, 'dict_value' => 'Linux%GSKIP%RHF9'),
+	790 => array ('chapter_id' => 13, 'dict_value' => 'Linux%GSKIP%RH Fedora 9'),
 	791 => array ('chapter_id' => 13, 'dict_value' => '[[Linux%GSKIP%openSUSE 11.0 | http://en.opensuse.org/OpenSUSE_11.0]]'),
 	792 => array ('chapter_id' => 11, 'dict_value' => 'SGI%GPASS%Altix XE250'),
 	793 => array ('chapter_id' => 11, 'dict_value' => 'SGI%GPASS%Altix XE310'),
@@ -952,7 +952,7 @@ $dictionary = array
 	929 => array ('chapter_id' => 17, 'dict_value' => '[[Juniper%GPASS%T640 | http://www.juniper.net/products_and_services/t_series_core_platforms/index.html]]'),
 	930 => array ('chapter_id' => 17, 'dict_value' => '[[Juniper%GPASS%T1600 | http://www.juniper.net/products_and_services/t_series_core_platforms/index.html]]'),
 	931 => array ('chapter_id' => 17, 'dict_value' => '[[Juniper%GPASS%TX Matrix | http://www.juniper.net/products_and_services/t_series_core_platforms/index.html]]'),
-	932 => array ('chapter_id' => 13, 'dict_value' => '[[Linux%GSKIP%RHF10 | http://docs.fedoraproject.org/release-notes/f10/]]'),
+	932 => array ('chapter_id' => 13, 'dict_value' => 'Linux%GSKIP%RH Fedora 10'),
 	933 => array ('chapter_id' => 13, 'dict_value' => '[[Linux%GSKIP%openSUSE 11.1 | http://en.opensuse.org/OpenSUSE_11.1]]'),
 	934 => array ('chapter_id' => 12, 'dict_value' => '[[F5%GPASS%BIG-IP WebAccelerator 4500 | http://www.f5.com/pdf/products/big-ip-webaccelerator-ds.pdf]]'),
 	935 => array ('chapter_id' => 12, 'dict_value' => '[[F5%GPASS%VIPRION | http://www.f5.com/pdf/products/viprion-overview-ds.pdf]]'),
@@ -1063,7 +1063,7 @@ $dictionary = array
 	1042 => array ('chapter_id' => 12, 'dict_value' => '[[Brocade%GPASS%ServerIron ADX 8000 | http://www.brocade.com/products-solutions/products/ethernet-switches-routers/application-switching/product-details/serveriron-adx-series/overview.page]]'),
 	1043 => array ('chapter_id' => 12, 'dict_value' => '[[Brocade%GPASS%ServerIron 4G-SSL-FIPS | http://www.brocade.com/sites/dotcom/products-solutions/products/ethernet-switches-routers/application-switching/product-details/serveriron-4g-application-switches/index.page]]'),
 	1044 => array ('chapter_id' => 12, 'dict_value' => '[[Brocade%GPASS%TurboIron 24X | http://www.brocade.com/sites/dotcom/products-solutions/products/ethernet-switches-routers/enterprise-mobility/product-details/turboiron-24x-switch/index.page]]'),
-	1045 => array ('chapter_id' => 13, 'dict_value' => '[[Linux%GSKIP%RHF11 | http://docs.fedoraproject.org/release-notes/f11/]]'),
+	1045 => array ('chapter_id' => 13, 'dict_value' => 'Linux%GSKIP%RH Fedora 11'),
 	1046 => array ('chapter_id' => 13, 'dict_value' => '[[BSD%GSKIP%NetBSD 5.0 | http://netbsd.org/releases/formal-5/NetBSD-5.0.html]]'),
 	1047 => array ('chapter_id' => 13, 'dict_value' => '[[BSD%GSKIP%OpenBSD 4.5 | http://openbsd.org/45.html]]'),
 	1048 => array ('chapter_id' => 13, 'dict_value' => '[[BSD%GSKIP%OpenSolaris 2008.05 | http://opensolaris.org/os/project/indiana/resources/relnotes/200805/x86/]]'),
@@ -1345,6 +1345,14 @@ $dictionary = array
 	1324 => array ('chapter_id' => 28, 'dict_value' => 'Cisco%GPASS%MCS 7816'),
 	1325 => array ('chapter_id' => 28, 'dict_value' => 'Cisco%GPASS%MCS 7825'),
 	1326 => array ('chapter_id' => 28, 'dict_value' => 'Cisco%GPASS%MCS 7835'),
+	1327 => array ('chapter_id' => 17, 'dict_value' => '[[ Cisco%GPASS%2901 | http://www.cisco.com/en/US/products/ps10539/index.html]]'),
+	1328 => array ('chapter_id' => 17, 'dict_value' => '[[ Cisco%GPASS%2911 | http://www.cisco.com/en/US/products/ps10540/index.html]]'),
+	1329 => array ('chapter_id' => 17, 'dict_value' => '[[ Cisco%GPASS%2921 | http://www.cisco.com/en/US/products/ps10543/index.html]]'),
+	1330 => array ('chapter_id' => 17, 'dict_value' => '[[ Cisco%GPASS%2951 | http://www.cisco.com/en/US/products/ps10544/index.html]]'),
+	1331 => array ('chapter_id' => 13, 'dict_value' => 'Linux%GSKIP%ALTLinux 5'),
+	1332 => array ('chapter_id' => 13, 'dict_value' => '[[Linux%GSKIP%RH Fedora 12 | http://docs.fedoraproject.org/release-notes/f12/en-US/html/]]'),
+	1333 => array ('chapter_id' => 13, 'dict_value' => 'Linux%GSKIP%Gentoo 10.0'),
+	1334 => array ('chapter_id' => 13, 'dict_value' => 'Linux%GSKIP%Gentoo 10.1'),
 );
 
 ?>
